@@ -76,8 +76,10 @@ box_iterator BoxList::insert(box_iterator position, const Element& e)
   i = --end();
 
   if (position!=end())
+	{
     reorder(i, position);
-
+    i = --position;
+  }
   return i;
 }
 
