@@ -1,3 +1,14 @@
+2009-05-05  Johannes Schmid <jschmid@openismus.com>
+
+	* gtk/gtkmm/box.ccg:
+	* tests/boxhelper/main.c
+	* tests/boxhelper/Makefile.am
+	* tests/Makefile.am
+	* configure.ac:
+	Fixed 466853 – Gtk::Box_Helpers::BoxList::insert() has wrong 
+	return value
+	and added testcase
+
 2009-04-28  Johannes Schmid <jschmid@openismus.com>
 
   * gtk/gtkmm/stock.h:
